test: fix jsdom SecurityError
ref:  https://github.com/jsdom/jsdom/issues/2304

--- a/package.json
+++ b/package.json
@@ -89,7 +89,9 @@
       "git add"
     ]
   },
-  "jest": {},
+  "jest": {
+    "testURL": "http://127.0.0.1/"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
